@@ -1,6 +1,6 @@
 dnl  PowerPC-64 mpn_rshift -- rp[] = up[] << cnt
 
-dnl  Copyright 2003, 2005, 2010 Free Software Foundation, Inc.
+dnl  Copyright 2003, 2005, 2010, 2013 Free Software Foundation, Inc.
 
 dnl  This file is part of the GNU MP Library.
 
@@ -42,6 +42,10 @@ define(`rp',  `r7')
 
 ASM_START()
 PROLOGUE(mpn_rshift)
+
+ifdef(`HAVE_ABI_mode32',`
+	rldicl	n, n, 0,32		C FIXME: avoid this zero extend
+')
 	mflr	r12
 	bcl	20, 31, L(r)		C get pc using a local "call"
 L(r):	mflr	r11
@@ -80,6 +84,10 @@ L(1):	sld	r3, r9, tnc		C retval
 	srd	r8, r9, cnt
 	std	r8, 0(rp)
 	mtlr	r12
+ifdef(`HAVE_ABI_mode32',
+`	mr	r4, r3
+	srdi	r3, r3, 32
+')
 	blr
 
 
@@ -107,5 +115,9 @@ forloop(`i',1,63,`SHIFT(i)')
 
 L(com):	std	r10, 8(rp)
 	mtlr	r12
+ifdef(`HAVE_ABI_mode32',
+`	mr	r4, r3
+	srdi	r3, r3, 32
+')
 	blr
 EPILOGUE()
